tests/integration/conformance/testdata/rbac/authorizationPolicy/basic/input.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: AuthorizationPolicy
metadata:
  name: authz-policy-access-b-http-tcp
spec:
  workload_selector:
    labels:
      app: b
  allow:
    - subjects:
        - names: ["allUsers"]
      actions:
        - methods: ["GET"]
          not_paths: ["/secret*"]
        - constraints:
            - key: "destination.port"
              values: ["90"]
