tests/integration/conformance/testdata/rbac/authorizationPolicy/basic/mcp.yaml
constraints:
  - collection: istio/rbac/v1alpha1/authorizationpolicies
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "allow": [
              {
                "actions": [
                {
                  "methods": [
                    "GET"
                  ],
                  "not_paths": [
                    "/secret*"
                  ]
                },
                {
                  "constraints": [
                  {
                    "key": "destination.port",
                    "values": [
                      "90"
                    ]
                  }
                  ]
                }
                ],
                "subjects": [
                {
                  "names": [
                    "allUsers"
                  ]
                }
                ]
              }
              ],
              "workload_selector": {
                "labels": {
                  "app": "b"
                }
              }
            },
            "Metadata": {
              "name": "{{.Namespace}}/authz-policy-access-b-http-tcp"
            },
            "TypeURL": "type.googleapis.com/istio.rbac.v1alpha1.AuthorizationPolicy"
          }
